updated the resume

--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Satyam Sagar | Portfolio</title>
+    <title>
+      Satyam Sagar - Web Developer | Crafting Captivating Web Experiences
+    </title>
+    <meta
+      name="description"
+      content="Passionate web developer with 3+ years' experience in WordPress, React, and more. Let's craft captivating web experiences together!"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/img/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -42,10 +66,10 @@
           </div>
           <div class="btn-nav-container">
             <div class="single-btn">
-              <a href="">
+              <a href="assets/satyam_resume.pdf">
                 <div class="btn-inner">
                   <div class="btn-icon">
-                    <img src="assets/img/github.png" alt="demo" />
+                    <img src="assets/img/download.svg" alt="demo" />
                   </div>
                   <div class="btn-text">Resume</div>
                 </div>
@@ -123,12 +147,12 @@
           <div class="social-block" style="padding-top: 48px">
             <div class="icon">
               <a href="https://github.com/satyam95"
-                ><img src="assets/img/github.png" alt="github"
+                ><img src="assets/img/github.svg" alt="github"
               /></a>
             </div>
             <div class="icon">
               <a href="https://www.linkedin.com/in/satyamsagar95/"
-                ><img src="assets/img/linkedin.png" alt="linkedin"
+                ><img src="assets/img/linkedin.svg" alt="linkedin"
               /></a>
             </div>
           </div>
@@ -138,12 +162,31 @@
         <div class="container">
           <h2 class="sub-heading">About me</h2>
           <div class="project-desc-para">
-            <p class="body-text"> Hello! I'm Satyam Sagar, a passionate Computer Science and Engineering (CSE) graduate with over 3 years of experience in the world of web development.</p>
-            <p class="body-text"> My journey in the tech industry began as a WordPress developer, where I honed my skills and developed a deep understanding of web technologies. I've had the pleasure of crafting numerous websites that seamlessly blend form and function.</p>
-            <p class="body-text">Along the way, I've embraced the ever-evolving world of frontend development. I'm proficient in a variety of technologies, including: React.js, Next.js, TypeScript, JavaScript, HTML, and CSS</p>
-            <p class="body-text">These skills allow me to create engaging and dynamic user interfaces, turning ideas into visually stunning and interactive web applications.</p>
-            <p class="body-text">I'm always eager to explore new challenges and opportunities in the tech world. If you're looking for someone who's passionate about crafting web experiences and loves to stay at the forefront of technology, let's connect and explore how we can collaborate!</p>
-            <p class="body-text">Feel free to reach out to me for discussions, collaborations, or just to say hi. I'm excited to connect with fellow professionals, share experiences, and learn from each other's journeys. Let's build the web together!</p>
+            <p class="body-text">
+              Hello there! I'm Satyam Sagar, a Computer Science and Engineering
+              graduate with over 3 years of experience in web development.
+            </p>
+            <p class="body-text">
+              My journey in tech began as a WordPress developer, where I refined
+              my skills and gained a deep understanding of web technologies.
+              I've had the pleasure of creating numerous websites that
+              seamlessly combine form and function.
+            </p>
+            <p class="body-text">
+              Along the way, I've embraced the ever-changing world of frontend
+              development. I'm skilled in various technologies, such as
+              React.js, Next.js, TypeScript, JavaScript, HTML, and CSS. These
+              skills enable me to design captivating and interactive user
+              interfaces, transforming ideas into visually appealing web
+              applications.
+            </p>
+            <p class="body-text">
+              I'm always excited to tackle new challenges and explore
+              opportunities in the tech realm. If you're searching for someone
+              passionate about crafting web experiences and staying up-to-date
+              with technology trends, let's connect and discuss potential
+              collaborations!
+            </p>
           </div>
         </div>
       </section>
@@ -307,20 +350,20 @@
               </div>
               <div class="btn-container">
                 <div class="single-btn">
-                  <a href="">
+                  <a href="https://flipkart-clone-satyam95.vercel.app/">
                     <div class="btn-inner">
                       <div class="btn-icon">
-                        <img src="assets/img/github.png" alt="demo" />
+                        <img src="assets/img/website.svg" alt="demo" />
                       </div>
                       <div class="btn-text">View Demo</div>
                     </div>
                   </a>
                 </div>
                 <div class="single-btn">
-                  <a href="">
+                  <a href="https://github.com/satyam95/flipkart_clone">
                     <div class="btn-inner">
                       <div class="btn-icon">
-                        <img src="assets/img/github.png" alt="demo" />
+                        <img src="assets/img/code.svg" alt="demo" />
                       </div>
                       <div class="btn-text">View Code</div>
                     </div>
@@ -358,6 +401,7 @@
                 <ul class="skill-list">
                   <li class="body-text">React</li>
                   <li class="body-text">Next.js</li>
+                  <li class="body-text">React Testing Library</li>
                 </ul>
               </div>
             </div>
@@ -392,12 +436,12 @@
           <div class="social-block">
             <div class="icon">
               <a href="https://github.com/satyam95"
-                ><img src="assets/img/github.png" alt="github"
+                ><img src="assets/img/github.svg" alt="github"
               /></a>
             </div>
             <div class="icon">
               <a href="https://www.linkedin.com/in/satyamsagar95/"
-                ><img src="assets/img/linkedin.png" alt="linkedin"
+                ><img src="assets/img/linkedin.svg" alt="linkedin"
               /></a>
             </div>
           </div>
