updated the icons and text changes

--- a/index.html
+++ b/index.html
@@ -204,11 +204,9 @@
                 <p class="date-comp padd-btm">Aug 2021 - Present</p>
                 <ul class="pos-desc">
                   <li class="body-text">
-                    Successfully contributed to a Next.js project utilizing
-                    Test-Driven Development (TDD) principles. Ensured code
-                    quality and reliability by writing unit tests before
-                    implementing features, resulting in a robust and
-                    maintainable web application.
+                    Developed a comprehensive job portal enabling candidates to
+                    explore and apply for job openings while integrating a blog
+                    to highlight the company's culture and employee stories.
                   </li>
                   <li class="body-text">
                     Recognized and awarded a cash prize for exceptional
@@ -216,10 +214,16 @@
                     commitment to excellence in web development.
                   </li>
                   <li class="body-text">
-                    Successfully designed and developed multiple custom WP
-                    Bakery components, seamlessly integrated into websites via a
-                    bespoke WordPress plugin, enhancing site functionality and
-                    user experience.
+                    Applied Test-Driven Development (TDD) principles to Ensured
+                    code quality and reliability by writing unit tests before
+                    implementing features, resulting in a robust and
+                    maintainable web application.
+                  </li>
+                  <li class="body-text">
+                    Crafted and implemented numerous custom WP Bakery components,
+                    seamlessly integrating them into websites using a
+                    tailor-made WordPress plugin, elevating both site
+                    functionality and the overall user experience.
                   </li>
                   <li class="body-text">
                     Implemented web accessibility best practices to enhance
@@ -288,7 +292,7 @@
             </div>
             <div class="exp-block">
               <div class="comp-block">
-                <h3 class="body-head-comp">
+                <h3 class="body-head-comp special-head">
                   Insignia Web & Marketing Pvt. Ltd.
                 </h3>
                 <p class="date-comp">Jul 2017 - Jan 2018</p>
@@ -446,7 +450,9 @@
             </div>
           </div>
         </div>
-        <p class="text-center body-text">satyamsagar30@gmail.com</p>
+        <p class="text-center body-text">
+          <a href="mailto:satyamsagar30@gmail.com">satyamsagar30@gmail.com</a>
+        </p>
       </div>
     </footer>
     <script async src="assets/js/script.js"></script>
